(chores) camel-tooling: use unmodifiable lists when possible