@@ -149,7 +149,7 @@ public abstract class AbstractGeneratorMojoTest {
     private void assertCompileSourceRoots(Supplier<List<String>> roots, File... expectedSources) {
         List<String> compileSourceRoots = roots.get();
         assertEquals(expectedSources.length, compileSourceRoots.size());
-        assertEquals(Stream.of(expectedSources).map(File::getAbsolutePath).collect(Collectors.toList()), compileSourceRoots);
+        assertEquals(Stream.of(expectedSources).map(File::getAbsolutePath).toList(), compileSourceRoots);
     }
 
 }
